<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAssetActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.AssetApp.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.AssetApp.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/img_assetImg"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@android:drawable/ic_input_add"
            android:contentDescription="@string/upload_image_description" />

        <!-- Asset ID -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_assetId"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/asset_id"
                android:inputType="text"
                android:importantForAutofill="no" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Title -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_assetTitle"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/title"
                android:inputType="text"
                android:importantForAutofill="no" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Description -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_assetDescription"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/description"
                android:inputType="text"
                android:importantForAutofill="no" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Serial Number -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_assetSerialNum"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/serial_number"
                android:inputType="text"
                android:importantForAutofill="no" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Manufacturer -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_assetManufacturer"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/manufacturer"
                android:inputType="text"
                android:importantForAutofill="no" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Model Number -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_assetModelNum"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/model_number"
                android:inputType="text"
                android:importantForAutofill="no" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Location -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_label" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">
                <!-- Latitude -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_assetLatitude"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="15dp"
                        android:hint="@string/latitude"
                        android:inputType="numberDecimal"
                        android:importantForAutofill="no" />
                </com.google.android.material.textfield.TextInputLayout>
                <!-- Longitude -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_assetLongitude"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="15dp"
                        android:hint="@string/longitude"
                        android:inputType="numberDecimal"
                        android:importantForAutofill="no" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_addAsset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"/>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>